exclude Sonar Scanner and adsf

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ modules/jdbc-pool/includes
 modules/openssl-java17/target
 modules/openssl-foreign/target
 webapps/docs/jdbc-pool.xml
+# SonarScanner
+.scannerwork
+# adsf
+.tool-versions
