--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ java/org/apache/catalina/startup/catalina.properties
 modules/jdbc-pool/bin
 modules/jdbc-pool/includes
 webapps/docs/jdbc-pool.xml
+# SonarScanner
+.scannerwork
+# adsf
+.tool-versions
